fix: increase margin-bottom for Tentang Kami text block to fix spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -895,7 +895,7 @@ html {
 }
 
 .wave-divider-bottom {
-  margin-top: -1px;
+  margin-top: 4rem;
 }
 
 .wave-divider-top {
